--- a/index.html
+++ b/index.html
@@ -1,27 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css?family=Lora|Ubuntu:400,700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/styles.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Lora|Ubuntu:400,700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css/styles.css" />
     <title>Living the Good Life!</title>
-</head>
-<body>
+  </head>
+  <body>
     <header>
+      <div class="container container-nav">
         <div class="site-title">
-            <h1>Living the simple life</h1>
-            <p class="subtitle">a blog exploring minimalism in life</p>
+          <h1>Living the simple life</h1>
+          <p class="subtitle">a blog exploring minimalism in life</p>
         </div>
         <nav>
-            <ul>
-                <li><a href="#" class="current-page">Home</a></li>
-                <li><a href="#">About Me</a></li>
-                <li><a href="#">Recent Posts</a></li>
-            </ul>
+          <ul>
+            <li><a href="#" class="current-page">Home</a></li>
+            <li><a href="#">About Me</a></li>
+            <li><a href="#">Recent Posts</a></li>
+          </ul>
         </nav>
+      </div>
     </header>
-    
-</body>
+  </body>
 </html>
