add text and images

--- a/index.html
+++ b/index.html
@@ -109,24 +109,24 @@
 
       <aside class="sidebar">
         <div class="sidebar-widget">
-          <h2 class="widget-title"></h2>
-          <img src="" alt="" class="widget-image" />
-          <p class="widget-body"></p>
+          <h2 class="widget-title">ABOUT ME</h2>
+          <img src="images/about-me.jpg" alt="john doe" class="widget-image" />
+          <p class="widget-body">I find life better, and I'm happier, when things are nice and simple.</p>
         </div>
 
         <div class="sidebar-widget">
-          <h2 class="widget-title"></h2>
+          <h2 class="widget-title">RECENT POSTS</h2>
           <div class="widget-recent-post">
             <h3 class="widget-recent-post-title"></h3>
-            <img src="" alt="" class="widget-image" />
+            <img src="images/food.jpg" alt="two dumplings on a wood plate with chopsticks" class="widget-image" />
           </div>
           <div class="widget-recent-post">
-            <h3 class="widget-recent-post-title"></h3>
-            <img src="" alt="" class="widget-image" />
+            <h3 class="widget-recent-post-title">Simplicity and work</h3>
+            <img src="images/work.jpg" alt="a chair white chair at a white desk on a white wall" class="widget-image" />
           </div>
           <div class="widget-recent-post">
-            <h3 class="widget-recent-post-title"></h3>
-            <img src="" alt="" class="widget-image" />
+            <h3 class="widget-recent-post-title">Simple decorations</h3>
+            <img src="images/deco.jpg" alt="a green plant in a clear, round vase with water in it" class="widget-image" />
           </div>
         </div>
       </aside>
