--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
-      href="https://fonts.googleapis.com/css?family=Lora|Ubuntu:400,700&display=swap"
+      href="https://fonts.googleapis.com/css?family=Lora|Ubuntu:300,400,700&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="css/styles.css" />
@@ -101,7 +101,11 @@
             <a href="#" class="article-read-more">CONTINUE READING</a>
           </div>
           <div class="article-recent-secondary">
-            <img src="images\deco.jpg" alt="a green plant in a clear, round vase with water in it" class="article-image" />
+            <img
+              src="images\deco.jpg"
+              alt="a green plant in a clear, round vase with water in it"
+              class="article-image"
+            />
             <p class="article-info">July 3, 2019 | 3 comments</p>
           </div>
         </article>
@@ -111,22 +115,37 @@
         <div class="sidebar-widget">
           <h2 class="widget-title">ABOUT ME</h2>
           <img src="images/about-me.jpg" alt="john doe" class="widget-image" />
-          <p class="widget-body">I find life better, and I'm happier, when things are nice and simple.</p>
+          <p class="widget-body">
+            I find life better, and I'm happier, when things are nice and
+            simple.
+          </p>
         </div>
 
         <div class="sidebar-widget">
           <h2 class="widget-title">RECENT POSTS</h2>
           <div class="widget-recent-post">
             <h3 class="widget-recent-post-title"></h3>
-            <img src="images/food.jpg" alt="two dumplings on a wood plate with chopsticks" class="widget-image" />
+            <img
+              src="images/food.jpg"
+              alt="two dumplings on a wood plate with chopsticks"
+              class="widget-image"
+            />
           </div>
           <div class="widget-recent-post">
             <h3 class="widget-recent-post-title">Simplicity and work</h3>
-            <img src="images/work.jpg" alt="a chair white chair at a white desk on a white wall" class="widget-image" />
+            <img
+              src="images/work.jpg"
+              alt="a chair white chair at a white desk on a white wall"
+              class="widget-image"
+            />
           </div>
           <div class="widget-recent-post">
             <h3 class="widget-recent-post-title">Simple decorations</h3>
-            <img src="images/deco.jpg" alt="a green plant in a clear, round vase with water in it" class="widget-image" />
+            <img
+              src="images/deco.jpg"
+              alt="a green plant in a clear, round vase with water in it"
+              class="widget-image"
+            />
           </div>
         </div>
       </aside>
