--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <header>
-      <div class="container container-nav">
+      <div class="container container-flex">
         <div class="site-title">
           <h1>Living the simple life</h1>
           <p class="subtitle">a blog exploring minimalism in life</p>
@@ -28,7 +28,7 @@
       </div>
     </header>
 
-    <div class="container">
+    <div class="container container-flex">
       <main role="main">
         <article class="article-featured">
           <h2 class="article-title">Finding simplicity in life</h2>
@@ -39,7 +39,7 @@
           />
           <p class="article-info">July 23, 2019 | 3 comments</p>
           <p class="article-body">
-            Life can get complicated really quickly, but it doesn't have to be!
+            <strong>Life can get complicated really quickly</strong>, but it doesn't have to be!
             There are many ways to simplify your life, a few of which we've
             explored in the past. This week we're taking a bit of a approach
             though, in how you can find simplicity in the life you already
