--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             though, in how you can find simplicity in the life you already
             living.
           </p>
-          <a href="#" class="article-read-more">CONTINUE READING</a>
+          <a href="#" class="article-read-more">Continue reading</a>
         </article>
 
         <article class="article-recent">
@@ -124,7 +124,7 @@
         <div class="sidebar-widget">
           <h2 class="widget-title">RECENT POSTS</h2>
           <div class="widget-recent-post">
-            <h3 class="widget-recent-post-title"></h3>
+            <h3 class="widget-recent-post-title">Keeping cooking simple</h3>
             <img
               src="images/food.jpg"
               alt="two dumplings on a wood plate with chopsticks"
